--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,18 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/http-client": "5.0.*",
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/yaml": "5.0.*",
+        "twig/intl-extra": "^3.0",
+        "twig/twig": "^2.0"
     },
     "require-dev": {
     },
